# ITMO

./: README.md
CT1/cpp/hw/b1-percolation/: CMakeLists.txt  README.md
CT1/cpp/hw/b1-percolation/libraries/Percolation/: CMakeLists.txt
CT1/cpp/hw/b1-percolation/libraries/Percolation/include/: Percolation.hpp  PercolationStats.hpp
CT1/cpp/hw/b1-percolation/libraries/Percolation/src/: Percolation.cpp  PercolationStats.cpp  Snm.cpp  Snm.hpp
CT1/cpp/hw/b1-percolation/libraries/Percolation/tests/: tests.cpp
CT1/cpp/hw/b2-wordnet/: CMakeLists.txt  conanfile.txt
CT1/cpp/hw/s1-trig/: CMakeLists.txt  README.md  conanfile.txt
CT1/cpp/hw/s2-treap/: CMakeLists.txt
CT1/cpp/hw/s2-treap/libraries/Tree/: CMakeLists.txt
CT1/cpp/hw/s2-treap/libraries/Tree/include/tree/: Tree.hpp
CT1/cpp/hw/s2-treap/libraries/Tree/src/: Tree.cpp
CT1/cpp/hw/s2-treap/libraries/Tree/tests/: main.cpp
CT1/cpp/hw/s3-lfru-buddy/: CMakeLists.txt  conan_provider.cmake  conanfile.txt
CT1/cpp/hw/s3-lfru-buddy/libraries/acp/: CMakeLists.txt
CT1/cpp/hw/s3-lfru-buddy/libraries/acp/include/acp/: Allocator.hpp  Cache.hpp  Pool.hpp
CT1/cpp/hw/s3-lfru-buddy/libraries/acp/src/: Pool.cpp
CT1/cpp/hw/s3-lfru-buddy/libraries/acp/tests/: test_cache.cpp
CT1/cpp/hw/test-task/: .clang-format  CMakeLists.txt  conanfile.py
CT1/cpp/hw/test-task/libtesttask/: CMakeLists.txt
CT1/cpp/hw/test-task/libtesttask/include/libtesttask/: libtesttask.hpp
CT1/cpp/hw/test-task/libtesttask/src/: libtesttask.cpp
CT1/cpp/hw/test-task/tests/: CMakeLists.txt
CT1/cpp/hw/test-task/tests/src/: runUnitTests.cpp
CT1/cpp/lections/: cpp_lecture_multithreading.odp
CT1/paradigms/clojure-solutions/: expression.clj  linear.clj  parser.clj  proto.clj
CT1/paradigms/java-solutions/queue/: AbstractQueue.java  ArrayQueue.java  ArrayQueueADT.java  ArrayQueueModule.java  LinkedQueue.java  Queue.java  TestArrayQueue.java  TestArrayQueueADT.java  TestArrayQueueModule.java  TestLinkedQueue.java  TestQueue.java
CT1/paradigms/java-solutions/search/: BinarySearch.java  BinarySearch3435.java
CT1/paradigms/javascript-solutions/: example.js  functionalExpression.js  objectExpression.js
CT1/paradigms/prolog-solutions/: primes.pl  tree-map.pl
CT2/(О)БЖД/: Здоровый_сон_Мочеков.docx  ЛР_ЧС_Мочеков.docx  Отчет к лаб.работе_Страх_2023.docx
CT2/DM/3sem/GrpahLabs/: task2.cpp  task4.cpp  task6.cpp  task7.cpp  task8.py
CT2/DM/3sem/Grpahs/: task1.cpp  task3.cpp  task5.cpp
CT2/DM/4sem/GenFunctions/: A.py  B.py  C.py  D.py  E.py  F.py  G.py  H.py  I.py
CT2/DM/4sem/Turing/: aplusb.out  balanced.out  convertto2.out  factorial.out  input.txt  (+7 more)
CT2/JavaAdv/java-solutions/: module-info.java
CT2/JavaAdv/scripts/: JarCreate.bat  JavaDocCreate.bat  MANIFEST.MF
CT2/OSadv/: SLAB.docx
CT2/OSadv/hw1/: Makefile  README.md  compile_flags.txt  grade  grade-dump2  gradelib.py  tools-macos.md
CT2/OSadv/labs/4 - networkfs/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  entry_lib.h  entrypoint.c  http.c  http.h  token.txt  util.h
CT2/OSadv/labs/4 - networkfs/.github/: pull_request_template.md
CT2/OSadv/labs/4 - networkfs/.github/scripts/: build.sh  lint.sh  prepare_disk.sh  run_vm.sh
CT2/OSadv/labs/4 - networkfs/.github/workflows/: networkfs.yml
CT2/OSadv/labs/4 - networkfs/tests/: base.cpp  encoding.cpp  file.cpp  link.cpp
CT2/OSadv/labs/4 - networkfs/tests/lib/: main.cpp  nfs.cpp  nfs.hpp  test.hpp  util.cpp  util.hpp
CT2/ProbTheory/: cmp_inequality.py  cmp_methods_of_pt.py  cmp_rand_val_gen.py
CT2/web/web1/: curl_comms.txt
CT2/web/web10/: package-lock.json  package.json
CT2/web/web8/: profile.properties
CT3/DataAnalysis/ds-smvfe/: data.arff  data.json  data.tsv  ds.ipynb
CT3/DataAnalysis/linear-smvfe/: data.csv  linear.ipynb
CT3/DataAnalysis/ts-smvfe/: household_power_consumption_daily_sum.csv  ts.ipynb
CT3/DataAnalysis/unsup-smvfe/: unsup.ipynb
CT3/FuncProg/fp-ctd-itmo-fp-autumn-2025/: README.md  code-style.md
CT3/FuncProg/homework-0-smvfe/: README.md
CT3/FuncProg/homework-1-smvfe/: README.md
CT3/FuncProg/homework-2-smvfe/: README.md
CT3/FuncProg/homework-3-smvfe/: README.md
CT3/FuncProg/homework-4-smvfe/: README.md
CT3/FuncProg/homework-5-smvfe/: README.md
CT3/MPP/casn-smvfe/: README.md
CT3/MPP/faa-queue-smvfe/: README.md
CT3/MPP/fc-queue-smvfe/: README.md
CT3/MPP/fine-grained-bank-smvfe/: README.md
CT3/MPP/hash-table-smvfe/: README.md
CT3/MPP/lamport-lock-fail-smvfe/: README.md  solution.txt
CT3/MPP/lock-free-bank-smvfe/: README.md
CT3/MPP/mcs-lock-smvfe/: README.md
CT3/MPP/monotonic-clock-smvfe/: README.md
CT3/MPP/msqueue-smvfe/: README.md
CT3/MPP/possible-executions-analysis/: README.md  solution.txt
CT3/MPP/read-write-bank-smvfe/: README.md
CT3/MPP/register-type-smvfe/: README.md  solution.txt
CT3/MPP/stack-elimination-smvfe/: README.md
CT3/MPP/stm-bank-smvfe/: README.md
CT3/MatStatistics/Lab2/: Lab2.ipynb
CT3/MatStatistics/Lab3/: lab3.ipynb
CT3/MatStatistics/Lab5/: Lab5.ipynb
CT3/MathStatistics/Lab1/: Lab1.ipynb
CT3/MathStatistics/Lab4/: lab4.ipynb
InfSec1/Informatics/: NumbersInMemory.c  array_output.asm  bubble_sort.asm  division.asm  linear_equation.asm  number_to_string.asm  string_output.asm  sum_of_two.asm  template_of_external_asm_proc.c  Ассемблер.txt  лабИНФ1.docx  лабИНФ2.docx  тестИНФ.docx
InfSec1/Programming/lab1/: Makefile  README.txt  lab1ssmN3151.c  ОтчётЛаб1.docx
InfSec1/Programming/lab2/: Makefile  README.txt  lab2ssmN3151.c  ОтчётЛаб2.docx
InfSec1/Programming/lab3/: Makefile  README.txt  lab3ssmN3151.c  ОтчётЛаб3.docx
InfSec1/Programming/lab4/: Makefile  lab4ssmN3151.c  test  ОтчётЛаб4-5.docx
InfSec1/Programming/lab5/: lab5.py  test
InfSec1/Programming/lab6/: lab6ssmN3151.py  test_lab6ssmN3151.py  ОтчётЛаб6.docx
InfSec1/ВПД/: ЦелостностьИнформации.docx
InfSec1/ВПД/Компьютерные сети/: Конспект.txt
InfSec1/ВПД/Целостность информации/: juice.png.gpg  key.asc  key_kirill.asc  notion.docx  notion.docx.gpg  notion.docx.sig  notion_kirill.doc  Задание.txt  Задание.txt.gpg
ck/: pom.xml
ck/.github/workflows/: test.yaml
(+314 files in other folders)
